Improve production server script

--- a/medici_server/nginx_template.conf
+++ b/medici_server/nginx_template.conf
@@ -17,11 +17,11 @@ server {
     client_max_body_size 75M;   # adjust to taste
 
     location /media  {
-        alias /srv/http/media;  # your Django project's media files - amend as required
+        alias <media_dir>;  # your Django project's media files - amend as required
     }
 
     location /static {
-        alias /srv/http/static; # your Django project's static files - amend as required
+        alias <static_dir>; # your Django project's static files - amend as required
     }
 
     location / {
