Improve production script

--- a/medici_server/uwsgi_template.ini
+++ b/medici_server/uwsgi_template.ini
@@ -5,15 +5,15 @@
 # the base directory (full path)
 chdir           = <project_dir>
 # Django's wsgi file
-module          = medici_server.wsgi
+module          = <main_app>.wsgi
 
 # process-related settings
 # master
 master          = true
 # maximum number of worker processes
-processes       = 8
+processes       = 4
 # the socket (use the full path to be safe)
-socket          = <project_dir>/medici_server/nginx.sock
+socket          = <project_dir>/<main_app>/nginx.sock
 # ... with appropriate permissions - may be needed
 # chmod-socket  = 664
 # clear environment on exit
