--- a/medici_server/nginx_template.conf
+++ b/medici_server/nginx_template.conf
@@ -10,7 +10,7 @@ server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name 0.0.0.0; # substitute your machine's IP address or FQDN
+    server_name 0.0.0.0 <domain_name>; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
@@ -26,6 +26,6 @@ server {
 
     location / {
         uwsgi_pass  django;
-        include     <project_dir>/medici_server/uwsgi_params; # the uwsgi_params file you installed
+        include     <project_dir>/<main_app>/uwsgi_params; # the uwsgi_params file you installed
     }
 }
