--- a/medici_server/nginx.conf
+++ b/medici_server/nginx.conf
@@ -10,7 +10,7 @@ server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name 0.0.0.0 medici-assistant.ddns.net; # substitute your machine's IP address or FQDN
+    server_name medici.ddns.net; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
