--- a/medici_server/nginx_template.conf
+++ b/medici_server/nginx_template.conf
@@ -2,7 +2,7 @@
 
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix://<project_dir>/medici_server/nginx.sock; # for a file socket
+    server unix:///tmp/nginx.sock; # for a file socket
 }
 
 # configuration of the server
@@ -28,4 +28,16 @@ server {
         uwsgi_pass  django;
         include     <project_dir>/<main_app>/uwsgi_params; # the uwsgi_params file you installed
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/medici.ddns.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/medici.ddns.net/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+
+    if ($scheme != "https"){
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
 }
