--- a/medici_server/uwsgi_template.ini
+++ b/medici_server/uwsgi_template.ini
@@ -1,6 +1,8 @@
 # uwsgi.ini file
 [uwsgi]
 
+plugins = python
+
 # Django-related settings
 # the base directory (full path)
 chdir           = <project_dir>
@@ -13,10 +15,14 @@ master          = true
 # maximum number of worker processes
 processes       = 4
 # the socket (use the full path to be safe)
-socket          = <project_dir>/<main_app>/nginx.sock
+socket          = /tmp/nginx.sock
+chown-socket    = http
 # ... with appropriate permissions - may be needed
 # chmod-socket  = 664
 # clear environment on exit
-vacuum          = true
+#vacuum          = true
+
+uid=flux
+gid=flux
 
 enable-threads = true
