--- a/medici_server/uwsgi_template.ini
+++ b/medici_server/uwsgi_template.ini
@@ -3,26 +3,13 @@
 
 plugins = python
 
-# Django-related settings
-# the base directory (full path)
 chdir           = <project_dir>
-# Django's wsgi file
 module          = <main_app>.wsgi
 
-# process-related settings
-# master
 master          = true
-# maximum number of worker processes
 processes       = 4
-# the socket (use the full path to be safe)
-socket          = /tmp/nginx.sock
-chown-socket    = http
-# ... with appropriate permissions - may be needed
-# chmod-socket  = 664
-# clear environment on exit
-#vacuum          = true
-
-uid=flux
-gid=flux
+socket          = <project_dir>/<main_app>/nginx.sock
+chmod-socket    = 664
+vacuum          = true
 
 enable-threads = true
