--- a/medici_server/nginx_template.conf
+++ b/medici_server/nginx_template.conf
@@ -1,40 +1,35 @@
 # medici nginx.conf
 
-# the upstream component nginx needs to connect to
 upstream django {
-    server unix:///tmp/nginx.sock; # for a file socket
+    server unix://<project_dir>/<main_app>/nginx.sock;
 }
 
 # configuration of the server
 server {
-    # the port your site will be served on
-    listen      80;
-    # the domain name it will serve for
-    server_name <domain_name>; # substitute your machine's IP address or FQDN
+    listen      80 http2;
+    server_name <domain_name>;
     charset     utf-8;
 
-    # max upload size
-    client_max_body_size 75M;   # adjust to taste
+    client_max_body_size 75M;
 
     location /media  {
-        alias <media_dir>;  # your Django project's media files - amend as required
+        alias <media_dir>;
     }
 
     location /static {
-        alias <static_dir>; # your Django project's static files - amend as required
+        alias <static_dir>;
     }
 
     location / {
         uwsgi_pass  django;
-        include     <project_dir>/<main_app>/uwsgi_params; # the uwsgi_params file you installed
+        include     <project_dir>/<main_app>/uwsgi_params;
     }
 
-    listen 443 ssl; # managed by Certbot
+    listen 443 ssl http2; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/medici.ddns.net/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/medici.ddns.net/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
 
     if ($scheme != "https"){
         return 301 https://$host$request_uri;
