Minor, but important fixes

--- a/medici_server/nginx_template.conf
+++ b/medici_server/nginx_template.conf
@@ -1,7 +1,7 @@
 # medici nginx.conf
 
 upstream django {
-    server unix://<project_dir>/<main_app>/nginx.sock;
+    server unix://<socket_path>;
 }
 
 # configuration of the server
