--- a/medici_server/uwsgi_template.ini
+++ b/medici_server/uwsgi_template.ini
@@ -8,8 +8,8 @@ module          = <main_app>.wsgi
 
 master          = true
 processes       = 4
-socket          = <project_dir>/<main_app>/nginx.sock
-chmod-socket    = 664
+socket          = <socket_path>
+chown-socket    = <nginx_user>
 vacuum          = true
 
 enable-threads = true
