Fix http -> https redirect error

--- a/medici_server/nginx_template.conf
+++ b/medici_server/nginx_template.conf
@@ -6,7 +6,7 @@ upstream django {
 
 # configuration of the server
 server {
-    listen      80 http2;
+    listen      80;
     server_name <domain_name>;
     charset     utf-8;
 
