--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+medici_server/nginx.conf
+medici_server/settings.py
+medici_server/uwsgi.ini
+
+system.log
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -99,7 +105,3 @@ ENV/
 
 # mypy
 .mypy_cache/
-
-medici_server/nginx.conf
-medici_server/settings.py
-medici_server/uwsgi.ini
