--- a/medici_server/nginx_template.conf
+++ b/medici_server/nginx_template.conf
@@ -26,8 +26,8 @@ server {
     }
 
     listen 443 ssl http2; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/medici.ddns.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/medici.ddns.net/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/medici-assistant.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/medici-assistant.com/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
